Use hash router for github deployment

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
       <title>Bug Tracker</title>
-      <!-- Start Single Page Apps for GitHub Pages -->
+      <!-- Start Single Page Apps for GitHub Pages
       <script type="text/javascript">
          // Single Page Apps for GitHub Pages
          // MIT License
@@ -54,7 +54,7 @@
             }
          })(window.location)
       </script>
-      <!-- End Single Page Apps for GitHub Pages -->
+      End Single Page Apps for GitHub Pages -->
    </head>
    <body>
       <noscript>You need to enable JavaScript to run this app.</noscript>
